Change install instructions structure

--- a/_posts/1970-01-01-Template.md
+++ b/_posts/1970-01-01-Template.md
@@ -1,7 +1,10 @@
 ---
-published: false
+published: true
 layout: app
 category: app
+created: 1970-01-01
+updated: 2015-03-21
+
 title: 
 title_obvious: false
 generic: 
@@ -15,43 +18,68 @@ authors:
 links:
   - type: Web
     url: 
-  - type: Google+
-    url: 
   - type: GitHub
     url: 
   - type: Launchpad
     url: 
-  - type: License
+  - type: Google+
     url: 
+  - type: Twitter
+    url:
+  - type: Facebook
+    url: 
+  - type: Chat
+    url: 
+  # Link to website with install instructions (for normal users)
+  - type: Install
+    url: 
+  # Link to instructions for build, readme, license
   - type: Build
     url: 
+  - type: Readme
+    url:
+  - type: License
+    url:
+  - type: Authors
+    url: 
+  # Screenshots, videos, reviews
   - type: Screenshots
     url: 
 
-screenshots_:
+screenshots:
   - File.png
 
-installation_:
+installation:
   - system: elementary OS
     info: 
-    - version: 0.3 "Freya"
+    - version: 0.3
       repository: default
       package: pack
-    - version: 0.2 "Luna"
+      type: stable
+    - version: 0.2
       repository: repo
       package: pack
+      type: unstable
   - system: Ubuntu
     info: 
-    - version: 14.04 LTS "Trusty Tahr"
+    - version: 14.04
       repository: ppaxy
       package: pack
+      type: daily
 
-tags_:
+tags:
+  - Cairo
+  - Clutter
+  - Granite
   - GTK3
+  - Icons
   - Vala
+  
   - Jupiter
   - Luna
   - Freya # available for Freya
+  - Loki
+
   - stock # shipped with elementary OS (might include Gnome Apps)
   - official # officially developed by elementary
 ---
