--- a/_posts/2015-01-07-NaSC.md
+++ b/_posts/2015-01-07-NaSC.md
@@ -9,7 +9,7 @@ license: GPL v3
 
 authors: 
   - name: Peter A
-    url: "https://plus.google.com/116373568615209021512/posts"
+    url: 'https://plus.google.com/116373568615209021512/posts'
 
 links:
   - type: Web
@@ -20,9 +20,17 @@ links:
 screenshots
   - NaSC.png
 
-repository:
+installation_:
+  - system: elementary OS
+    info: 
+    - version: 0.3
+      repository: 'ppa:nasc-team/daily'
+      type: unstable
+      package: nasc
+
 repository-unstable: 'ppa:nasc-team/daily'
 package: nasc
 ---
+
 ## Video
 [See NaSC in action!](https://dl.dropboxusercontent.com/u/28321853/screencast1411074345.webm)
