--- a/_posts/2014-04-08-Vocal.md
+++ b/_posts/2014-04-08-Vocal.md
@@ -2,32 +2,67 @@
 published: true
 layout: app
 category: app
+created: 2014-04-08
+updated: 2015-03-21
+
 title: Vocal
+title_obvious: false
 generic: Podcast manager
-description: 'Vocal is a podcast client for the modern free desktop. It is designed to be simple to use and packed full of all the features you&#39;ve come to expect in a podcast client – plus a few extras. We think you will love it.'
+description: 'A podcast client for the modern free desktop. It is designed to be simple to use and packed full of all the features you&#39;ve come to expect – plus a few extras. We think you will love it.'
 license: GPL v3
 
 authors: 
   - name: Nathan Dyer
     url: 'https://plus.google.com/+NathanDyerdotMe/posts'
-
-screenshots:
-  - Vocal.png
+    mail: 'mail@nathandyer.me'
 
 links:
   - type: Web
-    url: http://www.vocalproject.net
+    url: 'http://www.vocalproject.net'
   - type: Launchpad
     url: vocal
   - type: Google+
     url: 115162318639836328992/posts
-  - type: License
-    url: 'http://bazaar.launchpad.net/~nathandyer/vocal/trunk/view/head:/COPYING'
+  - type: Twitter
+    url: nathandyer_me
+  - type: Install
+    url: 'http://www.vocalproject.net/download/'
   - type: Build
     url: 'http://bazaar.launchpad.net/~nathandyer/vocal/trunk/view/head:/INSTALL'
-    
-repository-unstable: 'ppa:nathandyer/vocal-daily'
-package: 'vocal'
+  - type: License
+    url: 'http://bazaar.launchpad.net/~nathandyer/vocal/trunk/view/head:/COPYING'
+  - type: Authors
+    url: 'http://bazaar.launchpad.net/~nathandyer/vocal/trunk/view/head:/AUTHORS'
+
+screenshots:
+  - Vocal.png
+
+installation:
+  - system: elementary OS
+    info: 
+    - version: 0.3
+      repository: 'ppa:nathandyer/vocal-daily'
+      package: vocal
+      type: unstable
+  - system: Ubuntu
+    info: 
+    - version: 14.04
+      repository: 'ppa:nathandyer/vocal-daily'
+      package: vocal
+      type: unstable
+    - version: 14.10
+      repository: 'ppa:nathandyer/vocal-daily'
+      package: vocal
+      type: unstable
+    - version: 15.04
+      repository: 'ppa:nathandyer/vocal-daily'
+      package: vocal
+      type: unstable
+      
+tags:
+  - Freya
+  - GTK3
+  - Vala
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
