--- a/_posts/2014-10-20-Foto.md
+++ b/_posts/2014-10-20-Foto.md
@@ -2,32 +2,55 @@
 published: true
 layout: app
 category: app
+created: 2014-10-20
+updated: 2015-03-21
+
 title: Foto
 title_obvious: true
 generic: Photo manager
-description: 'Fast, simple, beautiful and free – Foto is a very simple image viewer and album manager written in Vala using Gtk3, Clutter, Cairo and Granite. The goal is to offer an excellent UX and usability.'
+description: 'Fast, simple, beautiful and free – a very simple and native image viewer and album manager. The goal is to offer an excellent UX and usability.'
 license: GPL v3
 
 authors: 
   - name: Erasmo Marín
-    url: "https://launchpad.net/~erasmo-marin"
+    url: 'https://launchpad.net/~erasmo-marin'
+    mail: 'erasmo.marin@gmail.com'
   - name: Fabio Zaramella
-    url: "https://launchpad.net/~ffabio-96-x"
+    url: 'https://launchpad.net/~ffabio-96-x'
+    mail: 'ffabio.96.x@gmail.com'
 
 links:
-  - type: GitHub
+  - type: Web
     url: 'http://erasmo-marin.github.io/foto/'
   - type: Launchpad
     url: foto
+  - type: Build
+    url: 'http://bazaar.launchpad.net/~foto-team/foto/foto-1.0/view/head:/INSTALL'
+  - type: License
+    url: 'http://bazaar.launchpad.net/~foto-team/foto/foto-1.0/view/head:/COPYING'
+  - type: Authors
+    url: 'http://bazaar.launchpad.net/~foto-team/foto/foto-1.0/view/head:/AUTHORS'
 
-repository-unstable: 'ppa:erasmo-marin/foto-1.0'
-package: 'foto'
+installation:
+  - system: elementary OS
+    info: 
+    - version: 0.3
+      repository: 'ppa:erasmo-marin/foto-1.0'
+      package: foto
+      type: unstable
+  - system: Ubuntu
+    info: 
+    - version: 14.10
+      repository: 'ppa:erasmo-marin/foto-1.0'
+      package: foto
+      type: unstable
 
 tags:
   - GTK3
   - Clutter
   - Cairo
   - Granite
+  - Vala
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
