--- a/_posts/2014-10-21-Taxi.md
+++ b/_posts/2014-10-21-Taxi.md
@@ -2,10 +2,14 @@
 published: true
 layout: app
 category: app
+created: 2014-10-21
+updated: 2015-03-21
+
 title: Taxi
+title_obvious: false
 generic: FTP client
 description: 'A simple to use FTP client. It nails the simple use case of transferring files to a remote server using a two-pane layout.'
-license: 'GPL v3'
+license: GPL v3
 
 authors: 
   - name: Kiran Hampal
@@ -16,4 +20,10 @@ authors:
 links:
   - type: Launchpad
     url: taxi
+  - type: Build
+    url: 'http://bazaar.launchpad.net/~khampal/taxi/trunk/view/head:/INSTALL'
+  - type: License
+    url: 'http://bazaar.launchpad.net/~khampal/taxi/trunk/view/head:/LICENSE'
 ---
+
+*As of 2015-03-21 the [last commit](https://code.launchpad.net/taxi) was on 2014-10-28.*
