--- a/_posts/1970-01-01-Template.md
+++ b/_posts/1970-01-01-Template.md
@@ -5,53 +5,53 @@ category: app
 created: 1970-01-01
 updated: 2015-03-21
 
-title: 
+title:
 title_obvious: false
-generic: 
+generic:
 description:
 license:
 
-authors: 
+authors:
   - name:
-    url: 
+    url:
 
 links:
   - type: Web
-    url: 
+    url:
   - type: GitHub
-    url: 
+    url:
   - type: Launchpad
-    url: 
+    url:
   - type: Google+
-    url: 
+    url:
   - type: Twitter
     url:
   - type: Facebook
-    url: 
+    url:
   - type: Chat
-    url: 
+    url:
   # Link to website with install instructions (for normal users)
   - type: Install
-    url: 
+    url:
   # Link to instructions for build, readme, license
   - type: Build
-    url: 
+    url:
   - type: Readme
     url:
   - type: License
     url:
   - type: Authors
-    url: 
+    url:
   # Screenshots, videos, reviews
   - type: Screenshots
-    url: 
+    url:
 
 screenshots:
   - File.png
 
 installation:
-  - system: elementary OS
-    info: 
+  - system: elementary
+    info:
     - version: 0.3
       repository: default
       package: pack
@@ -61,11 +61,13 @@ installation:
       package: pack
       type: unstable
   - system: Ubuntu
-    info: 
+    info:
     - version: 14.04
       repository: ppaxy
       package: pack
       type: daily
+
+# type can be stable, unstable, daily (in that order)
 
 tags:
   - Cairo
@@ -74,7 +76,7 @@ tags:
   - GTK3
   - Icons
   - Vala
-  
+
   - Jupiter
   - Luna
   - Freya # available for Freya
