--- a/_posts/2014-04-07-Birdie.md
+++ b/_posts/2014-04-07-Birdie.md
@@ -11,7 +11,10 @@ generic: Twitter client
 description: A beautiful Twitter client seamlessly integrated with your desktop environment. It is fast, easy to use and works great.
 license: GPL v3
 
-authors: 
+authors:
+  - name: Nathan Dayer
+    url: 'https://plus.google.com/+NathanDyerdotMe/posts'
+    mail: 'mail@nathandyer.me'
   - name: Ivo Nunes
     url: 'https://github.com/ivonunes'
     mail: 'ivoavnunes@gmail.com'
@@ -40,7 +43,7 @@ links:
     url: 'https://github.com/birdieapp/birdie/blob/master/AUTHORS.in'
 
 installation:
-  - system: elementary OS
+  - system: elementary
     info: 
     - version: 0.3
       repository: 'ppa:birdie-team/stable'
@@ -66,6 +69,9 @@ installation:
       type: stable
       
 tags:
+  - Granite
+  - GTK3
+  - Vala
   - Freya
 ---
 ## Video
