--- a/_posts/2014-04-08-Vocal.md
+++ b/_posts/2014-04-08-Vocal.md
@@ -11,7 +11,7 @@ generic: Podcast manager
 description: 'A podcast client for the modern free desktop. It is designed to be simple to use and packed full of all the features you&#39;ve come to expect – plus a few extras. We think you will love it.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Nathan Dyer
     url: 'https://plus.google.com/+NathanDyerdotMe/posts'
     mail: 'mail@nathandyer.me'
@@ -38,31 +38,37 @@ screenshots:
   - Vocal.png
 
 installation:
-  - system: elementary OS
-    info: 
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: vocal
+      type: stable
     - version: 0.3
       repository: 'ppa:nathandyer/vocal-daily'
       package: vocal
-      type: unstable
+      type: daily
   - system: Ubuntu
-    info: 
+    info:
     - version: 14.04
       repository: 'ppa:nathandyer/vocal-daily'
       package: vocal
-      type: unstable
+      type: daily
     - version: 14.10
       repository: 'ppa:nathandyer/vocal-daily'
       package: vocal
-      type: unstable
+      type: daily
     - version: 15.04
       repository: 'ppa:nathandyer/vocal-daily'
       package: vocal
-      type: unstable
-      
+      type: daily
+
 tags:
-  - Freya
+  - Clutter
+  - Granite
   - GTK3
   - Vala
+  - Freya
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
