--- a/_posts/2015-01-01-Cable.md
+++ b/_posts/2015-01-01-Cable.md
@@ -43,7 +43,7 @@ links:
     url: 'http://bazaar.launchpad.net/~julien-spautz/cable/trunk/view/head:/AUTHORS'
 
 installation:
-  - system: elementary OS
+  - system: elementary
     info: 
     - version: 0.3
       repository: 'ppa:versable/elementary-update'
