--- a/_posts/2015-01-07-Agenda.md
+++ b/_posts/2015-01-07-Agenda.md
@@ -2,22 +2,34 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Agenda
+title_obvious: false
 generic: Task management
 description: 'A simple, slick, speedy, no-nonsense task manager.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Dane Henson
-    url: "https://launchpad.net/~thegreatdane"
+    url: 'https://launchpad.net/~thegreatdane'
   - name: Cameron Norman
-    url: "https://launchpad.net/~cameronnemo"
+    url: 'https://launchpad.net/~cameronnemo'
   - name: Fabio Zaramella
-    url: "https://launchpad.net/~ffabio-96-x"
+    url: 'https://launchpad.net/~ffabio-96-x'
 
 links:
   - type: Launchpad
     url: agenda-tasks
+
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: agenda-tasks
+      type: stable
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
