--- a/_posts/2015-01-07-Akiee.md
+++ b/_posts/2015-01-07-Akiee.md
@@ -2,14 +2,18 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Akiee
+title_obvious: false
 generic: Task management
 description: 'A Markdown-based task manager for hackers and people who build stuff.'
 license: GPL v2
 
-authors: 
+authors:
   - name: Rockiger
-    url: "https://github.com/rockiger"
+    url: 'https://github.com/rockiger'
 
 links:
   - type: Web
