--- a/_posts/2015-01-07-Corebird.md
+++ b/_posts/2015-01-07-Corebird.md
@@ -2,18 +2,36 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Corebird
-generic: Twitter client	
+title_obvious: false
+generic: Twitter client
 description: 'Corebird is a modern, easy and fun Twitter client, just what you were looking for, right?'
 license: GPL v3
 
-authors: 
+authors:
   - name: baedert
-    url: https://github.com/baedert
+    url: 'https://github.com/baedert'
 
 links:
   - type: Web
-    url: 'http://corebird.baedert.org/'
+    url: 'http://corebird.baedert.org'
   - type: GitHub
     url: 'baedert/corebird'
+
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: corebird
+      type: stable
+  - system: Ubuntu
+    info:
+    - version: 14.04
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: corebird
+      type: stable
 ---
