--- a/_posts/2015-01-07-Currency.md
+++ b/_posts/2015-01-07-Currency.md
@@ -2,24 +2,41 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Currency
 title_obvious: true
 generic: Currency converter
-description: 
+description:
 license: GPL v3
 
-authors: 
+authors:
   - name: Grabli66
-    url: "https://plus.google.com/108440719526525277910"
+    url: 'https://plus.google.com/108440719526525277910'
 
 links:
 
 screenshots:
   - Currency.png
 
-repository: 'ppa:grabli66-r/eos'
-repository-unstable:
-package: 'currency'
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:grabli66-r/eos'
+      package: currency
+      type: stable
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: currency
+      type: stable
+  - system: Ubuntu
+    info:
+    - version: 14.04
+      repository: 'ppa:grabli66-r/eos'
+      package: currency
+      type: stable
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
