--- a/_posts/2015-01-07-Eidete.md
+++ b/_posts/2015-01-07-Eidete.md
@@ -2,16 +2,20 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Eidete
+title_obvious: false
 generic: Screencaster
 description: 'A simple screencasting app for the elementary project'
 license: GPL v3
 
-authors: 
+authors:
   - name: 'Sergey “Shnatsel” Davidoff'
-    url: "https://launchpad.net/~shnatsel"
+    url: 'https://launchpad.net/~shnatsel'
   - name: PerfectCarl
-    url: "https://launchpad.net/~name-is-carl"
+    url: 'https://launchpad.net/~name-is-carl'
 
 links:
   - type: Launchpad
