--- a/_posts/2015-01-07-Envelope.md
+++ b/_posts/2015-01-07-Envelope.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Envelope
+title_obvious: false
 generic: Budget management
 description: 'A personal budget application that helps you maintain your personal budget by using the tried-and-true envelope system. You designate spending categories (envelopes) and distribute your monthly income into them.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Nicolas Laplante
     url: "https://plus.google.com/+NicolasLaplante"
 
@@ -17,8 +21,17 @@ links:
   - type: GitHub
     url: nlaplante/envelope
 
-repository-unstable: 'ppa:nicolas-laplante/envelope-daily'
-package: 'envelope'
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: envelope
+      type: stable
+    - version: 0.3
+      repository: 'ppa:nicolas-laplante/envelope-daily'
+      package: envelope
+      type: unstable
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
