--- a/_posts/2015-01-07-Go For It!.md
+++ b/_posts/2015-01-07-Go For It!.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Go For It!
+title_obvious: false
 generic: Task management
 description: 'A simple and stylish productivity app, featuring a to-do list, merged with a timer that keeps your focus on the current task.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Manuel Kehl
     url: "https://plus.google.com/111316844546399833250"
 
@@ -19,10 +23,18 @@ links:
 
 screenshots:
   - Go For It!.png
-  
-repository: 'ppa:mank319/go-for-it'
-repository-unstable:
-package: 'go-for-it'
+
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: go-for-it
+      type: stable
+    - version: 0.3
+      repository: 'ppa:mank319/go-for-it'
+      package: go-for-it
+      type: stable
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
