--- a/_posts/2015-01-07-Gravel.md
+++ b/_posts/2015-01-07-Gravel.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Gravel
+title_obvious: false
 generic: Comic reader
-description: 
+description:
 license:
 
-authors: 
+authors:
   - name: Shawn McTear
     url: "https://plus.google.com/+ShawnMcTear"
 ---
