--- a/_posts/2015-01-07-Lollypop.md
+++ b/_posts/2015-01-07-Lollypop.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Lollypop
+title_obvious: false
 generic: Music player
 description: 'Lollypop is a GNOME music player.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Cédric Bellegarde
     url: "https://github.com/gnumdk"
 
