--- a/_posts/2015-01-07-NaSC.md
+++ b/_posts/2015-01-07-NaSC.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: NaSC
+title_obvious: false
 generic: Calculator
 description: 'Do maths like a normal person. Type whatever you want and the app smartly figures it out. You can even plug those answers into future equations and if that answer changes, so do the equations.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Peter A
     url: 'https://plus.google.com/116373568615209021512/posts'
 
@@ -20,16 +24,17 @@ links:
 screenshots
   - NaSC.png
 
-installation_:
-  - system: elementary OS
-    info: 
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: nasc
+      type: stable
     - version: 0.3
       repository: 'ppa:nasc-team/daily'
-      type: unstable
       package: nasc
-
-repository-unstable: 'ppa:nasc-team/daily'
-package: nasc
+      type: daily
 ---
 
 ## Video
