--- a/_posts/2015-01-07-Silaty.md
+++ b/_posts/2015-01-07-Silaty.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Silaty
+title_obvious: false
 generic: Muslim prayer times
-description: 
+description:
 license: GPL v3
 
-authors: 
+authors:
   - name: Jesse Brandão
     url: "https://plus.google.com/111228118570001154569"
 
