--- a/_posts/2015-01-07-Squeegee.md
+++ b/_posts/2015-01-07-Squeegee.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Squeegee
+title_obvious: false
 generic: Maintenance
 description:
 license: GPL v3
 
-authors: 
+authors:
   - name: Juan Pablo Lozano
     url: "https://plus.google.com/117692827692672354132"
 
