--- a/_posts/2015-01-07-Yatla.md
+++ b/_posts/2015-01-07-Yatla.md
@@ -2,22 +2,22 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Yatla
+title_obvious: false
 generic: Task management
 description: 'Yatla is a to-do app programmed in Vala, using Gtk and sqlheavy as database.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Denis Grebennicov
     url: "https://github.com/denis631"
 
 links:
   - type: GitHub
     url: denis631/Yatla
-
-repository:
-repository-unstable:
-package:
 
 tags:
   - GTK3
