--- a/_posts/2015-01-07-eRadio.md
+++ b/_posts/2015-01-07-eRadio.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: eRadio
+title_obvious: false
 generic: Audio streaming
 description: 'Create a list of stations by providing their streaming url and then listen to them.'
 license: GPL v3
 
-authors: 
+authors:
   - name: George Sofianos
     url: "https://plus.google.com/113503999148667020901"
   - name: Fotini Skoti
@@ -26,9 +30,21 @@ links:
 screenshots:
   - eRadio.png
 
-repository: 'ppa:dreamdev/stable'
-repository-unstable: 'ppa:dreamdev/daily'
-package: 'eradio'
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: eradio
+      type: stable
+    - version: 0.3
+      repository: 'ppa:dreamdev/stable'
+      package: eradio
+      type: stable
+    - version: 0.3
+      repository: 'ppa:dreamdev/daily'
+      package: eradio
+      type: daily
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
