--- a/_posts/2015-01-13-Footnote.md
+++ b/_posts/2015-01-13-Footnote.md
@@ -2,12 +2,16 @@
 published: false
 layout: app
 category: app
+created: 2015-01-13
+updated: 2015-04-28
+
 title: Footnote
+title_obvious: false
 generic: Note keeping
 description: A beautiful, fast, and simple note taking app in the style of elementary.
 license: GPL v3
 
-authors: 
+authors:
   - name: Tom Beckmann
     url: "https://launchpad.net/~tombeckmann"
   - name: Artem Anufrij
@@ -20,7 +24,15 @@ links:
 screenshots:
   - Footnote.png
 
-repository:
-repository-unstable:
-package: footnote
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: footnote
+      type: stable
+    - version: 0.3
+      repository: 'ppa:elementary-os/daily'
+      package: footnote
+      type: daily
 ---
