--- a/_posts/2015-01-14-Fantasy.md
+++ b/_posts/2015-01-14-Fantasy.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-14
+updated: 2015-04-28
+
 title: Fantasy
+title_obvious: false
 generic: Book reader
-description: 
+description:
 license: GPL v3
 
-authors: 
+authors:
   - name: Samuel Dolt
     url: "https://launchpad.net/~samuel-dolt"
   - name: Nephis Vermilion
@@ -17,7 +21,15 @@ links:
   - type: Launchpad
     url: fantasy
 
-repository: ppa:fantasy/ppa
-repository-unstable:
-package: fantasy
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: fantasy
+      type: stable
+    - version: 0.3
+      repository: 'ppa:fantasy/ppa'
+      package: fantasy
+      type: stable
 ---
