--- a/_posts/2015-01-14-Synopsis.md
+++ b/_posts/2015-01-14-Synopsis.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-14
+updated: 2015-04-28
+
 title: Synopsis
+title_obvious: false
 generic: Archive utility
 description: 'A simple and concise archive utility.'
 license: GPL v2
 
-authors: 
+authors:
   - name: Mark Raymond Jr.
     url: "https://launchpad.net/~markrtoon"
 
@@ -16,7 +20,6 @@ links:
     url: synopsis
   - type: Build
     url: 'http://bazaar.launchpad.net/~markrtoon/synopsis/trunk/view/head:/INSTALL'
-    
 ---
 
 *As of 2015-02-04 the [last commit](https://code.launchpad.net/synopsis) was on 2014-04-23. The project might be dead.*
