--- a/_posts/2015-02-26-Webby.md
+++ b/_posts/2015-02-26-Webby.md
@@ -2,14 +2,17 @@
 published: true
 layout: app
 category: app
+created: 2015-02-26
+updated: 2015-04-28
+
 title: Webby
 title_obvious: false
 generic: Web app browser
 description: Webby allows you to use Facebook, Youtube or any web app as a regular desktop, fully integrated into your system and using a proper launcher in your application menu.
 
-license: GPL v3 
+license: GPL v3
 
-authors: 
+authors:
   - name: Erasmo Marín
     url: "https://launchpad.net/~erasmo-marin"
 
@@ -19,17 +22,23 @@ links:
   - type: Build
     url: "http://bazaar.launchpad.net/~erasmo-marin/webby-browser/trunk/view/head:/INSTALL"
 
-installation_:
+installation:
   - system: elementary OS
-    info: 
+    info:
     - version: 0.3
-      repository: "ppa:erasmo-marin/webby-browser"
-      package: webby-browser 
-  - system: Ubuntu
-    info: 
-    - version: 14.10
-      repository: "ppa:erasmo-marin/webby-browser"
+      repository: 'ppa:justsomedood/justsomeelementary'
       package: webby-browser
+      type: stable
+    - version: 0.3
+      repository: 'ppa:erasmo-marin/webby-browser'
+      package: webby-browser
+      type: unstable
+  - system: Ubuntu
+    info:
+    - version: 14.10
+      repository: 'ppa:erasmo-marin/webby-browser'
+      package: webby-browser
+      type: unstable
 
 tags:
   - Vala
