--- a/_posts/2015-03-17-eUtility.md
+++ b/_posts/2015-03-17-eUtility.md
@@ -2,13 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-03-17
+updated: 2015-04-28
+
 title: eUtility
 title_obvious: false
 generic: Switchboard plug
 description: It makes user life easier.
 license: GPL v3
 
-authors: 
+authors:
   - name: Adam Bieńkowski
     url: https://launchpad.net/~donadigo
 
@@ -23,12 +26,17 @@ links:
 screenshots_:
   - File.png
 
-installation_:
-  - system: elementary OS
-    info: 
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: eutility
+      type: stable
     - version: 0.3
       repository: 'ppa:donadigo/eutility'
       package: eutility
+      type: stable
 
 tags:
   - GTK3
