--- a/_posts/2014-10-20-Foto.md
+++ b/_posts/2014-10-20-Foto.md
@@ -11,7 +11,7 @@ generic: Photo manager
 description: 'Fast, simple, beautiful and free – a very simple and native image viewer and album manager. The goal is to offer an excellent UX and usability.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Erasmo Marín
     url: 'https://launchpad.net/~erasmo-marin'
     mail: 'erasmo.marin@gmail.com'
@@ -32,14 +32,18 @@ links:
     url: 'http://bazaar.launchpad.net/~foto-team/foto/foto-1.0/view/head:/AUTHORS'
 
 installation:
-  - system: elementary OS
-    info: 
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: foto
+      type: stable
     - version: 0.3
       repository: 'ppa:erasmo-marin/foto-1.0'
       package: foto
       type: unstable
   - system: Ubuntu
-    info: 
+    info:
     - version: 14.10
       repository: 'ppa:erasmo-marin/foto-1.0'
       package: foto
