--- a/_posts/2014-10-21-Taxi.md
+++ b/_posts/2014-10-21-Taxi.md
@@ -11,11 +11,11 @@ generic: FTP client
 description: 'A simple to use FTP client. It nails the simple use case of transferring files to a remote server using a two-pane layout.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Kiran Hampal
-    url: "https://launchpad.net/~khampal"
+    url: 'https://launchpad.net/~khampal'
   - name: Daniel Fore
-    url: "https://launchpad.net/~danrabbit"
+    url: 'https://launchpad.net/~danrabbit'
 
 links:
   - type: Launchpad
@@ -24,6 +24,14 @@ links:
     url: 'http://bazaar.launchpad.net/~khampal/taxi/trunk/view/head:/INSTALL'
   - type: License
     url: 'http://bazaar.launchpad.net/~khampal/taxi/trunk/view/head:/LICENSE'
+
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: taxi
+      type: stable
 ---
 
-*As of 2015-03-21 the [last commit](https://code.launchpad.net/taxi) was on 2014-10-28.*
+*As of 2015-03-21 the [last commit](https://code.launchpad.net/taxi) was on 2014-10-28, the project might be dead.*
