--- a/_posts/2015-01-07-ComGen.md
+++ b/_posts/2015-01-07-ComGen.md
@@ -2,14 +2,18 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: ComGen
+title_obvious: false
 generic: Developer tool
-description: 
+description:
 license: GPL v3
 
-authors: 
+authors:
   - name: Jeremy Vaartjes
-    url: "https://plus.google.com/109424692236917039830"
+    url: 'https://plus.google.com/109424692236917039830'
 
 links:
   - type: Web
