--- a/_posts/2015-01-07-Feedler.md
+++ b/_posts/2015-01-07-Feedler.md
@@ -2,13 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Feedler
 title_obvious: true
 generic: Feed reader
 description: 'Feedler is an awesome RSS reader'
 license: GPL v3
 
-authors: 
+authors:
   - name: Avi Romanoff
     url: "https://launchpad.net/~aroman"
 
@@ -19,9 +22,13 @@ links:
 screenshots:
   - Feedler.png
 
-repository:
-repository-unstable: 'ppa:feedler-hackers/daily'
-package: 'feedler'
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:feedler-hackers/daily'
+      package: feedler
+      type: daily
 ---
 ## Video
 A review by [Joaquín Padilla Rivero](https://www.youtube.com/channel/UC_im4PuM9ViTNjaUf2cXmgg)
