--- a/_posts/2015-01-07-Gazette.md
+++ b/_posts/2015-01-07-Gazette.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Gazette
+title_obvious: false
 generic: Desktop widget
 description: 'Gazette is a news service for your desktop. It supports Services and right now shows you the weather recently used files and global world news.'
 license: GPL v3
 
-authors: 
+authors:
   - name: Eduard Gotwig
     url: "https://launchpad.net/~gotwig"
 
@@ -15,6 +19,11 @@ links:
   - type: Launchpad
     url: gazette
 
-repository: 'ppa:gotwig/weekly'
-package: 'gazette'
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:gotwig/weekly'
+      package: gazette
+      type: unstable
 ---
