--- a/_posts/2015-01-07-Poe.js.md
+++ b/_posts/2015-01-07-Poe.js.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: 'Poe.js'
+title_obvious: false
 generic: Word processor
 description: 'A word processor built with HTML, CSS, and CoffeeScript. This application is following Writer Concept by spiceofdesign on DeviantArt.'
 license: 'GPL v3'
 
-authors: 
+authors:
   - name: Ryan Riffle
     url: "https://plus.google.com/115441007574184937069"
 
