--- a/_posts/2015-01-07-Pomodoro.md
+++ b/_posts/2015-01-07-Pomodoro.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Pomodoro
+title_obvious: false
 generic: Timer
 description: 'A Pomodoro app for the elementary OS desktop'
 license: 'GPL v3'
 
-authors: 
+authors:
   - name: Mario César
     url: "https://github.com/mariocesar"
 
