--- a/_posts/2015-01-07-Writer.md
+++ b/_posts/2015-01-07-Writer.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-07
+updated: 2015-04-28
+
 title: Writer
-generic: Word processor	
+title_obvious: false
+generic: Word processor
 description: 'Writer aims to be a super-simple, lightweight, and integrated word processor.'
 license: MIT
 
-authors: 
+authors:
   - name: Tuur Dutoit
     url: "https://launchpad.net/~tuur-dutoit-f"
   - name: Anthony Huben
