--- a/_posts/2015-01-14-Focus.md
+++ b/_posts/2015-01-14-Focus.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-14
+updated: 2015-04-28
+
 title: Focus
+title_obvious: false
 generic: Task management
 description:
 license: GPL v3
 
-authors: 
+authors:
   - name: Alexander Wilms
     url: "https://launchpad.net/~alexander-wilms"
 
@@ -15,7 +19,15 @@ links:
   - type: Launchpad
     url: focus-app
 
-tags: 
+installation:
+  - system: elementary
+    info:
+    - version: 0.3
+      repository: 'ppa:justsomedood/justsomeelementary'
+      package: focus
+      type: stable
+
+tags:
   - GTK+3
   - Vala
 ---
