--- a/_posts/2015-01-17-iViewer.md
+++ b/_posts/2015-01-17-iViewer.md
@@ -2,12 +2,16 @@
 published: true
 layout: app
 category: app
+created: 2015-01-17
+updated: 2015-04-28
+
 title: iViewer
+title_obvious: false
 generic: Device integration
 description: Apple users with a jailbroken device can finally use iMessage remotely!
 license: GPL v3
 
-authors: 
+authors:
   - name: Felipe Escoto a.k.a Philip Scott
     url: "https://plus.google.com/116970085465259483479"
 
