--- a/_posts/1970-01-01-Template.md
+++ b/_posts/1970-01-01-Template.md
@@ -53,7 +53,7 @@ installation:
   - system: elementary
     info:
     - version: 0.3
-      repository: default
+      repository: 'ppa:justsomedood/justsomeelementary'
       package: pack
       type: stable
     - version: 0.2
@@ -67,6 +67,8 @@ installation:
       package: pack
       type: daily
 
+# version should just be the number aka x.x
+# repository is either an actual repo (like ppa: or http://) or default/stock (which one?)
 # type can be stable, unstable, daily (in that order)
 
 tags:
