Hello GCleaner, good bye html apps

--- a/_posts/2015-01-07-Lollypop.md
+++ b/_posts/2015-01-07-Lollypop.md
@@ -22,4 +22,20 @@ links:
     url: gnumdk/lollypop
   - type: Google+
     url: 104349425299854550670
+
+installation:
+  - system: Ubuntu
+    info:
+    - version: 15.04
+      repository: ppa:gnumdk/lollypop
+      package:  lollypop
+      type: stable
+    - version: 14.10
+      repository: ppa:gnumdk/lollypop
+      package:  lollypop
+      type: stable
+    - version: 14.04
+      repository: ppa:gnumdk/lollypop
+      package:  lollypop
+      type: stable
 ---
