Fix redirects, date, icons

--- a/apps/.Template.md
+++ b/apps/.Template.md
@@ -1,12 +1,12 @@
 ---
-published: true
+published: false
 layout: app
 category: app
 created: 1970-01-01
 updated: 2015-03-21
 
 title:
-permalink: #should be /title
+permalink: #should be /title/ with trailing slash!
 title_obvious: false
 generic:
 description:
