--- a/apps/.Template.md
+++ b/apps/.Template.md
@@ -53,22 +53,22 @@ screenshots:
 installation:
   - system: elementary
     info:
-    - version: 0.3
+    - version: '0.3'
       repository: 'ppa:justsomedood/justsomeelementary'
       package: pack
       type: stable
-    - version: 0.2
+    - version: '0.2'
       repository: repo
       package: pack
       type: unstable
   - system: Ubuntu
     info:
-    - version: 14.04
+    - version: '14.04'
       repository: ppaxy
       package: pack
       type: daily
 
-# version should just be the number aka x.x
+# version should just be the number aka 'x.x'
 # repository is either an actual repo (like ppa: or http://) or default/stock (which one?)
 # type can be stable, unstable, daily (in that order)
 
