--- a/apps/.Template.md
+++ b/apps/.Template.md
@@ -1,18 +1,16 @@
 ---
-published: true
+published: false # defaults to true, remove and leave line blank if not needed
 layout: app
-category: app
 created: 1970-01-01
 updated: 2015-03-21
 
-title:
-permalink: #should be /title/ with trailing slash!
-title_obvious: false
+permalink: #should be /:title/ with trailing slash!
+title_obvious: true # defaults to false, remove if not needed
 generic:
 description:
 license:
 
-authors:
+authors: 
   - name:
     url:
 
